# qurl-conformance

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  Makefile  README.md  agent_api_key_id.go  agent_api_key_id_test.go  agent_credential_recovery.go  agent_credential_recovery_test.go  agent_session.go  agent_session_test.go  assignment_ticket.go  assignment_ticket_test.go  connector_authority_lambda.go  connector_authority_lambda_test.go  connector_hub_lst_cookie.go  connector_hub_lst_cookie_test.go  connector_hub_request_id.go  connector_hub_request_id_test.go  embed.go  embed_test.go  go.mod  release-please-config.json  schema.go
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
npm/: CHANGELOG.md  index.d.ts  index.js  package.json
python/: CHANGELOG.md  README.md  pyproject.toml
python/qurl_conformance/: __init__.py
python/qurl_conformance/_data/: agent_api_key_id_vectors.json  agent_assignment_golden.json  agent_knock_application_vectors.json  agent_session_control_vectors.json  assignment_ticket_v1_vectors.json  connector_authority_lambda_v1_vectors.json  issuer_signature_vectors.json  qv2_conformance_vectors.json
scripts/: check-sync.sh  sync-vectors.sh
vectors/: README_agent_api_key_id_vectors.md  README_agent_credential_recovery_v1_vectors.md  README_agent_knock_application_vectors.md  README_agent_session_control_vectors.md  README_assignment_ticket_v1_vectors.md  README_connector_authority_lambda_v1_vectors.md  README_connector_hub_lst_cookie_v1_vectors.md  README_connector_hub_request_id_v1_vectors.md  (+9 more)
(+30 files in other folders)
